<resources>
    <string name="app_name">Corona</string>
    <string name="app_title">infection status online</string>

    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_login_btn">Login</string>
    <string name="login_register_btn">Register</string>
    <string name="login_remember_me">Remember me</string>
    <string name="login_invalid_username">Bad login username</string>
    <string name="login_invalid_password">Bad login password</string>
</resources>
