<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackgroundBlue"
    android:padding="10dp"
    android:textColor="@color/colorGray">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/warcraftlogs"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Warcraft Logs"
        android:textSize="40dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorGray"
        android:fontFamily="monospace"
        />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_username"
        android:textColor="@color/colorBlizzardBlue"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:textColor="@color/colorBlizzardBlue"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_remember_me"
        android:textColor="@color/colorGray"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login_login_btn"
            android:background="@color/colorBlizzardBlue"/>

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login_register_btn"
            android:background="@color/colorGray"/>

    </LinearLayout>

</LinearLayout>